# modern_cpp

atm_proj/: CMakeLists.txt
atm_proj/inc/: Account.hpp  Bank.hpp  Transaction.hpp
atm_proj/src/: Account.cpp  Transaction.cpp  main.cpp
library_manager/: CMakeLists.txt
library_manager/data/: books.txt
library_manager/inc/: Books.hpp  Items.hpp  Library.hpp  Student.hpp  User.hpp
library_manager/src/: Books.cpp  Items.cpp  Library.cpp  User.cpp  main.cpp  student.cpp
